# fastapi-template

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  README_cn.md  alembic.ini  docker-compose.yml  pyproject.toml
.ci/: docker-compose.yml
.github/workflows/: code-integration.yml
api/: Dockerfile  __init__.py  logging.conf  main.py  pytest.ini  repository.py  test_all.py
api/migrations/: env.py
api/migrations/versions/: 0001_initial_migration.py
