[tool.poetry]
name = "fastapi-template"
version = "1.2.0"

authors = ["Donny Peeters <donny.peeters@hotmail.com>"]
maintainers = ["Donny Peeters <donny.peeters@hotmail.com>"]
description = "A FastAPI template."
readme = "README.md"
homepage = "https://github.com/BiteStreams/fastapi-template"
repository = "https://github.com/BiteStreams/fastapi-template"
keywords = ["FastAPI", "Template"]


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
fastapi = "^0.85.1"
uvicorn = "^0.18.3"
SQLAlchemy = "^1.4.42"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

